Update exercises to use new form of exercise object declaration

--- a/AV/Development/AVLtreeRotationPRO.html
+++ b/AV/Development/AVLtreeRotationPRO.html
@@ -536,7 +536,7 @@
 
         av.recorded(); // we are not recording an AV with an algorithm
 
-        var exercise = av.exercise(modelSolution, initialize, {}, {feedback: "atend"});
+        var exercise = av.exercise(modelSolution, initialize, {feedback: "atend"});
         exercise.reset();
 
         av.container.find(".jsavexercisecontrols input[name='undo']").click(function () {
