--- a/AV/Development/ClickHandlerTest.html
+++ b/AV/Development/ClickHandlerTest.html
@@ -119,7 +119,7 @@
             return modelArray;
         }
         
-        var exercise = av.exercise(modelSolution, initialize, {}, {feedback: "atend"});
+        var exercise = av.exercise(modelSolution, initialize, {feedback: "atend"});
         exercise.reset();
         
 
