--- a/AV/Development/qTopSort.html
+++ b/AV/Development/qTopSort.html
@@ -4,7 +4,7 @@
   <title>Queue Based Topological sort</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-  <link rel="stylesheet" href="../../lib/odsaAV.css" type="text/css" />
+  <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
   <link rel="stylesheet" href="qTopSort.css" type="text/css" />
 </head>
 
@@ -15,8 +15,8 @@
       <td class="headerLeft">
         <input type="button" id="help" name="help" value="Help" />
       </td>
-      <td class="headerCenter">
-        <h1>Queue Based Topological Sort</h1>
+      <td class="headerCenter avTitle">
+        Queue-based Topological Sort
       </td>
       <td class="headerRight">
         <input type="button" id="about" name="about" value="About" />
