--- a/AV/Development/sackProficiency.html
+++ b/AV/Development/sackProficiency.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
     <title>Fib Proficiency</title>
     <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" media="screen" title="NOT kd-tree" charset="utf-8" />
-     <link href="opendsaAV.css" title="CSS" rel="stylesheet" type="text/css" />
+     <link href="../../lib/odsaAV-min.css" title="CSS" rel="stylesheet" type="text/css" />
   
     <style>
     .jsavcontainer {
