--- a/AV/Development/selectionSort2PRO.html
+++ b/AV/Development/selectionSort2PRO.html
@@ -142,7 +142,9 @@
             $.fx.off = oldfx;
         }
 
-        var exercise = av.exercise(modelSolution, initialize, {css: "background-color"}, {feedback: "atend"});
+        var exercise = av.exercise(modelSolution, initialize,
+                                   { compare: {css: "background-color"},
+                                     feedback: "atend"});
         exercise.reset();
         
         // bind a function to handle all click events on the array
