--- a/AV/Development/stackTest.html
+++ b/AV/Development/stackTest.html
@@ -67,7 +67,7 @@
             return modelArray;
         }
         
-        var exercise = av.exercise(modelSolution, initialize, {}, {feedback: "atend"});
+        var exercise = av.exercise(modelSolution, initialize, { feedback: "atend"});
         exercise.reset();
         
         $("#buttonPop").click(function () {
