--- a/AV/Hashing/HashingDelPRO.html
+++ b/AV/Hashing/HashingDelPRO.html
@@ -55,6 +55,6 @@
     <script src="../../JSAV/build/JSAV-min.js"></script>
     <script src="../../lib/odsaUtils-min.js"></script>
     <script src="../../lib/odsaAV-min.js"></script>
-    <script src="HashingDeleteProficiency.js"></script>
+    <script src="HashingDelPRO.js"></script>
   </body>
 </html>
