--- a/Exercises/RecurTutor/rectFIBmystbc1.html
+++ b/Exercises/RecurTutor/rectFIBmystbc1.html
@@ -9,8 +9,9 @@
  
 <body>
 <script>
-function checkAnswer(answer) {
-  if ( answer == 2) {
+
+function checkAnswer(answer , a) {
+  if ( answer == a) {
     return true;
   } else {
     return false;
@@ -19,6 +20,9 @@ function checkAnswer(answer) {
 </script>
   
 <div class="exercise">
+  <div class="vars">
+    <var id="a">randRange(0, 99)</var>
+  </div>
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="question">     
@@ -32,13 +36,13 @@ function checkAnswer(answer) {
 	 return a + mystery(a, b-1);	
       }
       </pre>		
-      What is the return of calling mystery(2,1)?</p>
+      What is the return of calling mystery(<var>a</var>, 1)?</p>
       <br> <textarea rows="1" cols="9" style="resize:none"  id="answerTextarea" ></textarea></p>
       <div class="solution" data-type="custom">
         <div class="guess"> [ "list" ] </div>
         <div class="validator-function">
          answer = parseInt($('#answerTextarea').val());
-         return checkAnswer(answer );
+         return checkAnswer(answer, a);
         </div>
       </div>
       <div class="hints">
