--- a/Exercises/RecurTutor/rectFIBir12.html
+++ b/Exercises/RecurTutor/rectFIBir12.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title> Recursion Tracing Exercise: Another Mystrey return</title>
+  <title> Recursion Tracing Exercise: func return </title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
@@ -9,16 +9,12 @@
  
 <body>
 <script>
-function mystery( n,  a , d)
-{
-	if(n==1)
-	 return a;
-	else
-	 return d + mystery(n-1,a,d);
-}
 
-function checkAnswer(answer , n, a , d) {
-  if ( answer == mystery(n, a , d)) {
+
+function checkAnswer(answer) {
+  
+  var modelAnswer = "infinite recursion";
+  if ( answer.toLowerCase() == modelAnswer.toLowerCase()) {
     return true;
   } else {
     return false;
@@ -28,30 +24,28 @@ function checkAnswer(answer , n, a , d) {
   
 <div class="exercise">
 <div class="vars">
-    <var id="n">randRange(2, 6)</var>
-    <var id="a">randRange(0, 5)</var>
-    <var id="d">randRange(0, 5)</var>
+    <var id="x">randRange(2, 10)</var>
+    <var id="y">randRange(2, 10)</var>
   </div>
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="question">     
       Consider the following function:
       <pre> 		
-      public int mystery(int n, int a , int d)
-      {
-	if(n==1)
-	 return a;
-	else
-	 return d + mystery(n-1,a,d);
+      int func (int x, int y) {
+       if (y == 1)
+	return x;
+       else	 
+	return x + func(x, y+1);
       }
       </pre>		
-     What value is returned by the call mystery(<var>n</var>,<var>a</var>,<var>d</var>)? (Either write a number, or write "infinite recursion".)</p>
+     What value does func(<var>x</var> , <var>y</var>) return? (Either write a number, or write "infinite recursion".) </p>
       <br> <textarea rows="1" cols="20" style="resize:none"  id="answerTextarea" ></textarea></p>
       <div class="solution" data-type="custom">
         <div class="guess"> [ "list" ] </div>
         <div class="validator-function">
-         answer = parseInt($('#answerTextarea').val());
-         return checkAnswer(answer, n, a, d);
+         answer = ($('#answerTextarea').val());
+         return checkAnswer(answer);
         </div>
       </div>
       <div class="hints">
