More recursion tracing exercises

--- a/Exercises/RecurTutor/rectFIBfwd13.html
+++ b/Exercises/RecurTutor/rectFIBfwd13.html
@@ -49,7 +49,7 @@ function checkAnswer(answer , A) {
         return mystery(numbers,index+1);		
       }
       </pre>		
-     If initially numbers= <var> A </var> and index=0 What will be the value returned by this mystery function? </p>
+     If initially numbers=[ <var> A </var> ] and index=0 What will be the value returned by this mystery function? </p>
       <br> <textarea rows="1" cols="20" style="resize:none"  id="answerTextarea" ></textarea></p>
       <div class="solution" data-type="custom">
         <div class="guess"> [ "list" ] </div>
