Complete the changes for automatic MathJax support. Fix some problems with InsertionSortWorstCaseCON.js

--- a/AV/Development/InsertionSortAnalysis.html
+++ b/AV/Development/InsertionSortAnalysis.html
@@ -13,7 +13,7 @@
   <table class="headerTable">
     <tr>
       <td class="headerCenter">
-        <h1>Insertion Sort Worst Case Analysis</h1>
+        Insertion Sort Worst Case Analysis
       </td>
       <td class="headerRight">
         <input type="button" id="about" name="about" value="About" />
