--- a/AV/Development/WorstCaseQuickSortAnalysis.html
+++ b/AV/Development/WorstCaseQuickSortAnalysis.html
@@ -13,7 +13,7 @@
   <table class="headerTable">
     <tr>
       <td class="headerCenter">
-        <h1>Worst Case Quick Sort Running Time Analysis</h1>
+        Worst Case Quick Sort Running Time Analysis
       </td>
       <td class="headerRight">
         <input type="button" id="about" name="about" value="About" />
