--- a/lib/conceptMap.html
+++ b/lib/conceptMap.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../../lib/odsaAV-min.css" type="text/css" />
-  <link rel="stylesheet" href="../../../conceptMap.css" type="text/css" />
+  <link rel="stylesheet" href="../../../lib/conceptMap.css" type="text/css" />
 
 
 
