--- a/RST/_themes/haiku/layout.html
+++ b/RST/_themes/haiku/layout.html
@@ -101,7 +101,7 @@
     <fieldset class="textbox">
       <div id="bug_error" class="error"></div>
         <span>{{ summary }}*:</span>
-        <input type="text" id="b_title" placeholder="Summary of the bug" />
+        <input type="text" id="b_title" placeholder="{{ summary }}" />
       </label>
 
       <label class="os">
@@ -129,12 +129,12 @@
 
       <label class="description">
         <span>{{ description }}*:</span><br>
-        <textarea id="b_description" rows="5" cols="25" placeholder="***BUG** Please enter: (1) a consice description of the problem. (2) steps to reproduce bug. (3) the version of your browser and operating system."></textarea>
+        <textarea id="b_description" rows="5" cols="25" placeholder="{{ bug_desc  }}"></textarea>
       </label>
 
       <label class="screenshot">
         <span>{{ screenshot }}:</span>
-        <input type="file" id="b_screenshot" accept="image/*" placeholder="Screenshot">
+        <input type="file" id="b_screenshot" accept="image/*" placeholder="{{ screenshot }}">
       </label>
 
       <p>
