More recursion progr exs and modifications to old ones

--- a/Exercises/RecurTutor/recwprog21.html
+++ b/Exercises/RecurTutor/recwprog21.html
@@ -13,7 +13,7 @@
   <style>
     #codeTextarea{
       width:400px;
-      height:200px;
+      height:150px;
     }
     .textAreaWithLines{
       font-family:courier;      
@@ -107,13 +107,20 @@
 
   <div class="problems">
     <div> <!-- Supresses answer box -->
-      <p class="problem" id = "test"> Spherical objects, such as cannonballs, can be stacked to form a pyramid with one cannonball at the top, sitting on top of a square composed of	four cannonballs, sitting on top of a square composed of nine cannonballs, and so forth. Given the following recursive function signature, write the function code such that it takes as its argument the height of a pyramid	of cannonballs and returns the number of cannonballs it contains based on the height of the stack. <br />
+
+      <p class="problem" id = "test"> <p align="center"><img src= "../../RST/Images/cannonballs.png" width="100" height="75"></p>
+Spherical objects, such as cannonballs, can be stacked to form a pyramid with one cannonball at the top, sitting on top of a square composed of	four cannonballs, sitting on top of a square composed of nine cannonballs, and so forth. Given the following recursive function signature, write the function code such that it takes as its argument the height of a pyramid	of cannonballs and returns the number of cannonballs it contains based on the height of the stack. <br />
 </h4>
 
-<textarea  id="codeTextarea"> 
-int Cannonball(int height)
-{
+<textarea  id="codeTextarea">int Cannonball(int height){
 		
+
+
+
+
+
+
+
 }
 </textarea></p>
 
