--- a/Exercises/RecurTutor/rectFIBmystbc1.html
+++ b/Exercises/RecurTutor/rectFIBmystbc1.html
@@ -2,9 +2,13 @@
 <html data-require="math">
 <head>
   <title> Recursion Tracing Exercise: Mystrey return </title>
-  <script src="../../lib/jquery.min.js"></script>
-  <script src="../../lib/jquery-ui.min.js"></script>
+<script src="../../lib/jquery.min.js">
+  </script>
+  <script src="../../lib/jquery-ui.min.js">
+  </script>
+ 
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
+  
 </head>
  
 <body>
