Converted all figures to png instead of jpg

--- a/Exercises/RecurTutor/recwprog20.html
+++ b/Exercises/RecurTutor/recwprog20.html
@@ -109,7 +109,7 @@
     <div> <!-- Supresses answer box -->
 
 <p class="problem" id = "test"> <p align ="center">
-<img src= "../../RST/Images/PascalTriangle.jpg" width="150" height="100"> </p>
+<img src= "../../RST/Images/PascalTriangle.png" width="150" height="100"> </p>
 Pascal’s triangle is a useful recursive definition that tells us the coefficients in the expansion of the polynomial (x + a)n . Each element in the triangle has a coordinate, given by the row it is on and its position in the row (which you could call a column). Every number in Pascals triangle is defined as the sum of the item above it and the item above it and to the left. If there is a position that does not have an entry, we treat it as if we had a 0 there. Given the following recursive function signature, write down the recursive function which takes a row and a column and finds the value at that position in the triangle.
 <textarea  id="codeTextarea">int pascal(int row, int column){
 
