--- a/Exercises/RecurTutor/recwprog30.html
+++ b/Exercises/RecurTutor/recwprog30.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math math-format word-problems spin">
 <head>
-  <title> Recursion Programming Exercise 29</title>
+  <title> Recursion Programming Exercise 30</title>
   <script src="../../lib/jquery.min.js">
   </script>
   <script src="../../lib/jquery-ui.min.js">
@@ -109,8 +109,8 @@
     <div> <!-- Supresses answer box -->
       <p class="problem" id = "test"> 
 Given the following recursive function signature, write the function code such that this function find out if a certain target weight can be measured or not<br />
-<p align ="center"> <img src= "../../RST/Images/oldmerch1.jpg" width="220" height="80"> 
-<img src= "../../RST/Images/oldmerch2.jpg" width="220" height="80"> </p>
+<p align ="center"> <img src= "../../RST/Images/oldmerch1.png" width="220" height="80"> 
+<img src= "../../RST/Images/oldmerch2.png" width="220" height="80"> </p>
 <textarea  id="codeTextarea">boolean RecIsMeasurable(int target, Vector<Integer> weights, int index)
 {
 
