Integrates the concept map generation  with the book creation process: - The preprocessor gets terms relationships information from the Glossary.rst file. - After the book is generated, the postprocessor parses the glossary.html file to retrieve term definition in HTML format, and save the graph definition JSON file inside html/_static directory. - Modifies conceptMap.js to read the new JSON graph definition file instead of the old XML file. - Updates the documentation accordingly.

--- a/lib/conceptMap.html
+++ b/lib/conceptMap.html
@@ -8,7 +8,18 @@
   <link rel="stylesheet" href="../../../lib/odsaAV-min.css" type="text/css" />
   <link rel="stylesheet" href="../../../lib/conceptMap.css" type="text/css" />
 
-
+  <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+      tex2jax: {
+        inlineMath: [['$','$'], ['\\(','\\)']],
+        displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
+        processEscapes: true
+      },
+      "HTML-CSS": {
+        scale: "80"
+      }
+    });
+  </script>
 
 </head>
 
@@ -24,6 +35,7 @@
 
   
   <script src="../../../lib/jquery.min.js"></script>
+  <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
   <script src="../../../lib/jquery-ui.min.js"></script>
   <script src="../../../JSAV/lib/jquery.transit.js"></script>
   <script src="../../../JSAV/lib/raphael.js"></script>
