--- a/AV/Development/conceptMap.html
+++ b/AV/Development/conceptMap.html
@@ -30,6 +30,7 @@
   <script src="../../JSAV/lib/jquery.transit.js"></script>
   <script src="../../JSAV/lib/raphael.js"></script>
   <script src="../../JSAV/build/JSAV-min.js"></script>
+  <script src="../../JSAV/lib/dagre.min.js"></script>
   <script src="../../lib/odsaUtils.js"></script>
   <script src="../../lib/odsaAV.js"></script> 
   <script src="conceptMap.js"></script>
