Add glossary terms, polish Intro section and IntroSumm questions

--- a/Exercises/Background/IntroMCQSE.html
+++ b/Exercises/Background/IntroMCQSE.html
@@ -17,6 +17,11 @@
       <ul class="choices">
 	<li><var>"To design an algorithm that makes efficient use of the computer's resources"</var></li>
       </ul>
+      <div class="hints">
+        <p>Designing efficient programs is a focus for data structures
+           and algorithms courses.<p>
+	<p>Designing and maintaining large programs is a focus for
+	   Software Engineering.</p>
     </div> 
   </div>
 </div>
