--- a/Exercises/Background/IntroMCQeff.html
+++ b/Exercises/Background/IntroMCQeff.html
@@ -19,7 +19,14 @@
 	<li><var>"A profiler"</var></li>
 	<li><var>"Empirical analysis"</var></li>
       </ul>
-    </div> 
+      <div class="hints">
+        <p>A profiler works on a program, not an algorithm.</p>
+        <p>The system clock works on a program, not an algorithm.</p>
+        <p>Empirical analysis works on a program, not an algorithm.</p>
+        <p>Algorithm analysis estimates the cost of an algorithm or
+           problem.</p> 
+      </div>
+    </div>
   </div>
 </div>
 </body>
