--- a/Exercises/Background/IntroMCQeff2.html
+++ b/Exercises/Background/IntroMCQeff2.html
@@ -18,6 +18,15 @@
 	<li><var>"It solves the problem within the required resource contraints"</var></li>
 	<li><var>"It requires fewer resources than known alternatives"</var></li>
       </ul>
+      <div class="hints">
+        <p>One definition for an efficient program is that it runs
+	   within the required resource constraints.</p>
+        <p>One definition for an efficient program is that it
+	   requires fewer resources than known alternatives.</p>
+	<p>Many efficient programs require more than linear
+	   time. Sometimes linear time is not efficient for a given
+	   problem.</p>
+      </div>
     </div> 
   </div>
 </div>
