--- a/Exercises/Background/IntroMCQexact.html
+++ b/Exercises/Background/IntroMCQexact.html
@@ -15,9 +15,19 @@
       <div class="solution"><var>"Where a record is returned if its unique identifier matches the search value"</var></div>
       <ul class="choices">
 	<li><var>"Where a record is returned if its relevant key value falls within a specified range"</var></li>
-	<li><var>"Another name for any database query for a key value"</var></li>
+	<li><var>"Another name for any database query that returns a key value"</var></li>
 	<li><var>"A way of efficiently locating the records in a database"</var></li>
       </ul>
+      <div class="hints">
+        <p>Returning a record that falls within a range is called a
+	   range query. </p>
+        <p>There are many database queries that are not exact-match
+	   queries.</p>
+	<p> Whether a search is efficient or not has nothing to do
+	    with whether it is an exact-match query or not.</p>
+        <p>A query to find the record that matches a unique identifier
+           is called an exact-match query.</p>
+      </div>
     </div> 
   </div>
 </div>
