--- a/Exercises/Background/IntroMCQpower.html
+++ b/Exercises/Background/IntroMCQpower.html
@@ -18,6 +18,16 @@
 	<li><var>"The algorithms have become easier to understand"</var></li>
 	<li><var>"We are better able to use our everyday intuition to solve problems"</var></li>
       </ul>
+      <div class="hints">
+        <p>Good solutions for large, complex computational problems usually
+           require different approaches than what we do in everyday life.</p>
+	<p>As problems that we try to solve grow more complicated,
+           their solutions tend to grow more complicated.</p>
+        <p>Processor speed cannot grow as fast as the cost of a slower
+           algorithm applied to a bigger problem.</p>
+        <p>As our computers have become more powerful, our history has
+           been to apply them to more complex problems.</p>
+      </div>
     </div> 
   </div>
 </div>
