--- a/Exercises/Background/IntroMCQrange.html
+++ b/Exercises/Background/IntroMCQrange.html
@@ -18,7 +18,17 @@
 	<li><var>"Another name for any database query for a key value"</var></li>
 	<li><var>"A way of efficiently locating the records in a database"</var></li>
       </ul>
-    </div> 
+      <div class="hints">
+        <p>A query to find the record that matches a unique identifier
+           is called an exact-match query.</p>
+        <p>There are many database queries that are not range
+	   queries.</p>
+	<p> Whether a search is efficient or not has nothing to do
+	    with whether it is a range query or not.</p>
+        <p>Returning a record that falls within a range is called a
+	   range query. </p>
+      </div>
+    </div>
   </div>
 </div>
 </body>
