--- a/Exercises/Background/IntroMCQselect.html
+++ b/Exercises/Background/IntroMCQselect.html
@@ -20,6 +20,18 @@
 	<li><var>"Quantify the resource constraints for each operation"</var></li>
 	<li><var>"Select the data structure that best meets the requirements determined in the prior steps of the process"</var></li>
       </ul>
+      <div class="hints">
+        <p>Knowing the basic operations required to solve your problem
+	   is the first step to selecting a suitable data structure.</p>
+        <p>Knowing the resource constraints for your problem's basic
+           operations is the second step to selecting a suitable data
+           structure.</p> 
+        <p>Once you know the basic operations and their resource
+           constraints, then you can select a data structure that
+           matches.</p>
+        <p>Many problems do not require that you run simulations to
+           determine the expected times for alternative solutions.</p>
+      </div>
     </div> 
   </div>
 </div>
