--- a/Exercises/Background/IntroMCQGoals.html
+++ b/Exercises/Background/IntroMCQGoals.html
@@ -11,13 +11,23 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question">Which is NOT a topic taught by OpenDSA?</p>
-      <div class="solution"><var>"How to write elegant programs"</var></div>
+      <p class="question">Which is NOT a topic that OpenDSA focuses on?</p>
+      <div class="solution"><var>"How to design and maintain large programs"</var></div>
       <ul class="choices">
 	<li><var>"The commonly used data structures"</var></li>
 	<li><var>"Introduce the idea of tradeoffs and reinforce the concept that there are costs and benefits associated with every data structure"</var></li>
 	<li><var>"How to measure the effectiveness of a data structure or algorithm"</var></li>	  	 
       </ul>
+      <div class="hints">
+        <p>A key topic for any DSA course is the basic toolkit of
+	   data structures and algorithms.</p>
+        <p>A key concept for any DSA course is the concept of tradeoffs
+           for costs versus benefits.</p>
+        <p>A key skill for any DSA course is ability to measure the
+	   effectiveness of a data structure or algorithm.
+	<p>Designing and maintaining large programs is a focus for
+	   Software Engineering.</p>
+      </div>
     </div> 
   </div>
 </div>
