--- a/lib/conceptMap.html
+++ b/lib/conceptMap.html
@@ -25,21 +25,30 @@
 
 <body>
 
+  <div class="header">
+        
+  
+      <script type="text/javascript" src="../../../lib/jquery.min.js"></script>
+      <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script type="text/javascript" src="../../../lib/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="../../../JSAV/lib/jquery.transit.js"></script>
+    <script type="text/javascript" src="../../../JSAV/lib/raphael.js"></script>
+    <script type="text/javascript" src="../../../JSAV/build/JSAV-min.js"></script>
+    <script type="text/javascript" src="_static/config.js"></script>
+    <script type="text/javascript" src="../../../lib/odsaUtils-min.js"></script>
+    <script type="text/javascript" src="../../../lib/odsaMOD-min.js"></script>
+    <script type="text/javascript" src="../../../lib/odsaAV.js"></script>
+    <script type="text/javascript" src="../../../lib/conceptMap.js"></script>
+
+  </div>
+
+
   <div id="cmapcontainer">
     <div class="avcontainer">
-      <iframe id ="info"></iframe>
+      <div id ="info"><div>
     </div>
   </div>
   
-  <script src="../../../lib/jquery.min.js"></script>
-  <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-  <script src="../../../lib/jquery-ui.min.js"></script>
-  <script src="../../../JSAV/lib/jquery.transit.js"></script>
-  <script src="../../../JSAV/lib/raphael.js"></script>
-  <script src="../../../JSAV/build/JSAV-min.js"></script>
-  <script src="../../../lib/odsaUtils.js"></script>
-  <script src="../../../lib/odsaAV.js"></script> 
-  <script src="../../../lib/conceptMap.js"></script>
 </body>
 </html> 
 
