Update to JSAV v0.7.0-209; polishing math background chapter

--- a/Exercises/Background/StTFeqvlnc.html
+++ b/Exercises/Background/StTFeqvlnc.html
@@ -30,6 +30,8 @@
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
+        <p> A relation is an equivalence relation if it is reflextive,
+        symmetric, and transitive.</p>
 	<p> Is the relation reflexive? That is, for every element A in
 	the set, is (A, A) in the relation?</p>
         <p> Is the relation symmetric? That is, for every pair A, B of
