--- a/Exercises/Background/StTFprtlordr.html
+++ b/Exercises/Background/StTFprtlordr.html
@@ -31,6 +31,8 @@
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
+        <p> A relation is a partial ordering if it is antisymmetric
+        and transitive.</p>
 	<p> Is the relation antisymmetric on the set? That is, for
           any two elements A and B of the set, if (A, B) is in the
           relation, then (B, A) is NOT in the relation?</p>
