More polishing for Background chapter

--- a/Exercises/Background/MthBgFIBlgbs1.html
+++ b/Exercises/Background/MthBgFIBlgbs1.html
@@ -15,6 +15,10 @@
       <p class="question">To the nearest integer, the log base 2 of
 	1,000,000 is: </p>
       <p class="solution" data-type="text"><var>20</var></p>
+      <div class="hints">
+        <p>How many times can wew divide 1,000,000 by 2 before we
+          reach a value close to 1?</p>
+      </div>
     </div>
   </div>
 </div>
