--- a/Exercises/Background/MthBgMCQdskacc.html
+++ b/Exercises/Background/MthBgMCQdskacc.html
@@ -18,6 +18,13 @@
 	<li><var>"Microseconds (millionths of a second)" </var> </li>
 	<li><var>"Nanoseconds (billionths of a second)"</var></li>
       </ul>
+      <div class="hints">
+        <p>You certainly don't wait for seconds each time your
+          computer accesses the disk.</p>
+        <p>Compared to other things going on in the computer (such as
+          access to RAM, which takes billionths of a second), a disk
+          access is much slower.</p>
+      </div>
     </div>
   </div>
 </div>
