--- a/Exercises/Background/MthBgMCQrmacc.html
+++ b/Exercises/Background/MthBgMCQrmacc.html
@@ -18,6 +18,13 @@
 	<li><var>"Microseconds (millionths of a second)" </var> </li>
 	<li><var>"Milliseconds (thousandths of a second)"</var></li>
       </ul>
+      <div class="hints">
+        <p>You certainly don't wait for seconds each time your
+          computer accesses the RAM.</p>
+        <p>Compared to other things going on in the computer (such as
+          access disk, which takes thousandths of a second), RAM
+          access is very fast.</p>
+      </div>
     </div>
   </div>
 </div>
