--- a/lib/conceptMap.html
+++ b/lib/conceptMap.html
@@ -33,6 +33,7 @@
     <script type="text/javascript" src="../../../lib/jquery-ui.min.js"></script>
     <script type="text/javascript" src="../../../JSAV/lib/jquery.transit.js"></script>
     <script type="text/javascript" src="../../../JSAV/lib/raphael.js"></script>
+    <script type="text/javascript" src="../../../JSAV/lib/dagre.min.js"></script>
     <script type="text/javascript" src="../../../JSAV/build/JSAV-min.js"></script>
     <script type="text/javascript" src="_static/config.js"></script>
     <script type="text/javascript" src="../../../lib/odsaUtils-min.js"></script>
